--- a/.gitignore
+++ b/.gitignore
@@ -56,9 +56,10 @@ playground.xcworkspace
 
 # Carthage
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
+Carthage/Checkouts
 
 Carthage/Build
+Cartfile.resolved
 
 # Accio dependency management
 Dependencies/
