--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/xcode,swift
 # Edit at https://www.gitignore.io/?templates=xcode,swift
 
@@ -39,12 +38,12 @@ playground.xcworkspace
 
 # Swift Package Manager
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
-# Package.pins
-# Package.resolved
+Packages/
+Package.pins
+Package.resolved
 .build/
 # Add this line if you want to avoid checking in Xcode SPM integration.
-# .swiftpm/xcode
+.swiftpm/xcode
 
 # CocoaPods
 # We recommend against adding the Pods directory to your .gitignore. However
@@ -56,9 +55,7 @@ playground.xcworkspace
 
 # Carthage
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
-Carthage/Checkouts
-
-Carthage/Build
+#Carthage/Checkouts
 
 # Accio dependency management
 Dependencies/
@@ -103,5 +100,4 @@ iOSInjectionProject/
 
 # End of https://www.gitignore.io/api/xcode,swift
 
-MangaDexLibTests/Secret.bundle
-MangaDexLibTests/Secret.bundle/*
+Secret.bundle
