--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -1,4 +1,4 @@
 author: Jean-Romain Garnier
 github_url: https://github.com/JRomainG/MangaDexLib
 module: MangaDexLib
-build_tool_arguments: ['-project', 'MangaDexLib.xcodeproj', '-scheme', 'MangaDexLib']
+build_tool_arguments: ['-project', 'MangaDexLib.xcodeproj', '-scheme', 'MangaDexLib-iOS']
