--- a/MangaDexLib.xcodeproj/xcshareddata/xcschemes/MangaDexLib-macOS.xcscheme
+++ b/MangaDexLib.xcodeproj/xcshareddata/xcschemes/MangaDexLib-macOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3322BDA7245DA4AC0086FA81"
-               BuildableName = "MangaDexLib_macOS.framework"
+               BuildableName = "MangaDexLib.framework"
                BlueprintName = "MangaDexLib-macOS"
                ReferencedContainer = "container:MangaDexLib.xcodeproj">
             </BuildableReference>
@@ -51,7 +51,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3322BDA7245DA4AC0086FA81"
-            BuildableName = "MangaDexLib_macOS.framework"
+            BuildableName = "MangaDexLib.framework"
             BlueprintName = "MangaDexLib-macOS"
             ReferencedContainer = "container:MangaDexLib.xcodeproj">
          </BuildableReference>
