--- a/.github/workflows/JazzyDocs.yml
+++ b/.github/workflows/JazzyDocs.yml
@@ -1,6 +1,9 @@
 name: Publish Jazzy Docs
 
 on: 
+  push:
+    branches:
+      - master
   release:
     types: [published]
 
@@ -12,5 +15,4 @@ jobs:
     - name: Publish Jazzy Docs
       uses: steven0351/publish-jazzy-docs@v1
       with:
-        config: .jazzy.yaml
         personal_access_token: ${{ secrets.JazzyGithubPageToken }}
