--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,5 +3,6 @@ excluded:
   - DerivedData
 
 disabled_rules:
-  - redundant_string_enum_value
+  - todo
   - identifier_name
+  - redundant_string_enum_value
