Add jazzy doc folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -100,4 +100,8 @@ iOSInjectionProject/
 
 # End of https://www.gitignore.io/api/xcode,swift
 
+# Jazzy doc
+docs/
+
+# Test credentials
 Secret.bundle
